<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/imageButton"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Poseidon" />
        <item
            android:id="@+id/imageButton8"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Zeus" />
        <item
            android:id="@+id/imageButton9"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Hades" />
        <item
            android:id="@+id/imageButton10"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Ares" />

        <item
                    android:id="@+id/imageButton11"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/Hefesto" />
        <item
                    android:id="@+id/imageButton12"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/Afrodita" />
    </group>
</menu>
